Fix rounded corners login and register on mobile

--- a/FoodHub/wwwroot/css/site.css
+++ b/FoodHub/wwwroot/css/site.css
@@ -65,6 +65,10 @@
   font-style: normal;
 }
 
+.gradient-border {
+  border-image: linear-gradient(to bottom, rgba(255, 255, 255, .17), rgba(255, 255, 255, .04)) 1;
+}
+
 html,
 body {
   height: 100vh;
@@ -209,6 +213,7 @@ body {
   font-size: 1rem;
   color: #666;
 }
+
 
 @media (max-width: 768px) {
   .image-text-container,
